--- a/Models/SpeechLM/2024.08.05_LSLM.md
+++ b/Models/SpeechLM/2024.08.05_LSLM.md
@@ -28,7 +28,7 @@
 ## Abstract: 摘要
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Dialogue serves as the most natural manner of human-computer interaction (HCI).
 Recent advancements in speech language models (SLM), have significantly enhanced speech-based conversational AI.
@@ -62,7 +62,7 @@ Demo can be found at https://ddlbojack.github.io/LSLM.
 ## 1.Introduction: 引言
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Dialogue is the most natural way of **Human-Computer Interaction (HCI)**.
 With the rapid development of [GPT-style [29]](../TextLM/2018.06.11_GPT.md) large language models (LLM) and the scaling of [Transformer [39]](../_Transformer/2017.06.12_Transformer.md)-style architectures, textual conversational AI, such as ChatGPT ([InstrcutGPT [27]](../TextLM/InstructGPT.md), [GPT-4 [01]](../TextLM/2023.03.15_GPT-4.md)) and [LLaMA [36]](../TextLM/2023.02.27_LLaMA.md), [LLaMA2 [37]](../TextLM/2023.07.18_LLaMA2.md), have become a significant part of daily life.
@@ -163,7 +163,7 @@ Experiments indicate that our proposed ***LSLM*** can achieve duplexing capabili
 ![../SpeechLM/Images/2024.08.05_LSLM_Fig.01.png](../SpeechLM/Images/2024.08.05_LSLM_Fig.01.png)
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Figure.01 illustrates the distinctions between simplex, half duplex, and full duplex speech language models from a telecommunication perspective.
 An SLM with full duplex modeling (FDM) capability can be referred to as an interactive speech language model (iSLM).
@@ -181,11 +181,11 @@ D. 全双工语音语言模型 (同时听说能力).
 ### Simplex and Half Duplex Speech Language Model: 单工和半双工语音语言模型
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Simplex SLMs, depicted in Figure.01(A) and Figure.01(B), are limited to a single channel, either for listening or speaking.
 With the assistance of LLM, simplex SLMs exhibit strong understanding capabilities.
-Representative works include LLM-based ASR ([Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md)), LLM-based speech translation ([COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md)), and LLM-based speech emotion understanding ([SECap [44]](2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](2024.07.10_AffectGPT.md)).
+Representative works include LLM-based ASR ([Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md)), LLM-based speech translation ([COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md)), and LLM-based speech emotion understanding ([SECap [44]](../Speech_Representaion/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../Speech_Representaion/2024.07.10_AffectGPT.md)).
 Similarly, simplex SLMs have demonstrated robust generation capabilities, as seen in LLM-based TTS ([LLM&VALL-E [15]](LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md)).
 Some research leverages the powerful in-context learning capabilities of LLMs to extend task-specific abilities to more universal applications, such as speech understanding ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), audio understanding ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)), or both ([SALMONN [35]](../SpeechLM/2023.10.20_SALMONN.md); [Qwen-Audio [09]](../SpeechLM/2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpeechLM/2024.07.15_Qwen2-Audio.md)).
 Despite their growing power and versatility, simplex SLMs are limited to one-way communication (either human $\rightarrow$ machine or machine $\rightarrow$ human).
@@ -201,7 +201,7 @@ While these half duplex models can both listen and speak, they are constrained t
 代表性的工作包括
 - 基于 LLM 的 ASR: [Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md);
 - 基于 LLM 的语音翻译: [COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md);
-- 基于 LLM 的语音情感理解: [SECap [44]](2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](2024.07.10_AffectGPT.md);
+- 基于 LLM 的语音情感理解: [SECap [44]](../Speech_Representaion/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../Speech_Representaion/2024.07.10_AffectGPT.md);
 
 类似地, 单工 SLMs 也展现出了稳健的生成能力, 如基于 LLM 的 TTS: [LLM&VALL-E [15]](LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md).
 
@@ -215,7 +215,7 @@ LLM 促进了从单工模型到半双工模型 (回合制模型) 的范式变化
 ### Full Duplex Speech Language Model: 全双工语音语言模型
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Full duplex SLMs, as shown in Figure.01(D), have the capability to listen and speak simultaneously, allowing for turn-taking whenever a human interrupts the machine.
 Recent efforts ([Zhang et al.[49]](Beyond_the_Turn-Based_Game__Enabling_Real-Time_Conversations_with_Duplex_Models.md); [Wang et al.[41]](2024.05.29_A_Full_Duplex_Speech_Dialogue_Scheme_Based_on_LLMs.md)) have attempted to build full duplex capabilities on text-centric LLMs with cascade ASR and TTS modules.
@@ -237,7 +237,7 @@ This gap highlights the need for further research and development to fully under
 ### Full Duplex Modeling (FDM): 全双工建模
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 A simplex or half duplex spoken dialogue system can be modeled by finding the parameters $\theta$ that maximize the log-likelihood function, formulated as:
 
@@ -304,7 +304,7 @@ $$
 ### LSLM
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 The core difference between ***LSLM*** and previous speech language models lies in its capability to simultaneously speak and listen.
 We first introduce the speaking capability of ***LSLM***, followed by its listening capability, and finally, we discuss various fusion methods that integrate these capabilities, endowing ***LSLM*** with full duplex ability.
@@ -318,7 +318,7 @@ We first introduce the speaking capability of ***LSLM***, followed by its listen
 #### Speaking Ability: 说话能力
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 To simulate the speaking ability of the ***LSLM***, we utilize an autoregressive token-based TTS model.
 Unlike [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)-styled models that combine autoregressive (AR) and non-autoregressive (NAR) approaches with multi-layer residual vector quantization (RVQ) tokens, our model employs a single layer of discrete audio tokens.
@@ -406,7 +406,7 @@ $$
 #### Listening Ability: 听力
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Given the audio input $X^S$ of the listening channel, the same SSL encoder $Enc$ in Equation.04 is used to obtain a continuous embedding $S$, which can be written as:
 
@@ -434,7 +434,7 @@ where the listened audio signal is mapped to a space that can be processed by th
 <a id="FDM_Ability"></a>
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 ***LSLM*** has two channels: speaking and listening.
 At time step $t$, all previous information of the speaking channel $R^q_{1:t-1}$ and the processed information of the listening channel $S^p_{1:t-1}$ are considered by the model simultaneously.
@@ -519,7 +519,7 @@ $$
 <a id="model_details"></a>
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 The backbone of the proposed ***LSLM*** employs a decoder-only Transformer architecture consisting of $12$ Transformer blocks, $12$ attention heads, $768$ embedding dimensions, and $3072$ feed-forward layer dimensions, resulting in $106$M parameters.
 SSL encoder [VQ-Wav2Vec [02]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) is employed to extract audio features and further convert speech features to discrete tokens.
@@ -539,7 +539,7 @@ A GAN-based token-to-waveform vocoder ([UniCATS [12]](../Diffusion/2023.06.13_Un
 ### Data Details: 数据细节
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We evaluate the proposed ***LSLM*** under two full duplex modeling (FDM) settings: command-based FDM and voice-based FDM.
 Table.01 summarizes the datasets and experimental settings.
@@ -581,7 +581,7 @@ In addition, we use a speaker independence setting, which guarantees that the sp
 ### Training and Inference Details: 训练和推理细节
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We train the model with TTS, interruption, and noise datasets for $20$ epochs.
 For each sample, noise is added with a $50\%$ probability, and interruption with a $50\%$ probability, to the listening tokens.
@@ -607,7 +607,7 @@ The generation process employs Top-P sampling with a top-p value of $0.99$ and a
 ### Evaluation Metrics: 评估指标
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 **TTS capability evaluation.**
 We evaluate whether the speech generation capability is affected by the full duplex modeling in the proposed ***LSLM***.
@@ -637,7 +637,7 @@ These metrics consider both the success rate of turn-taking (Recall) and the rat
 ## 5.Results: 结果
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We conduct a series of experiments to evaluate the command-based and voice-based FDM for both TTS capability and interactive capability.
 For TTS capability, we use a test set consisting of $500$ utterances, referred to as LibriTTS-testsetB ([UniCATS [12]](../Diffusion/2023.06.13_UniCATS.md)), without any interruptions in the listening channel.
@@ -668,7 +668,7 @@ Additionally, integrating noisy external inputs provides a better simulation of 
 ### Command-based FDM: 基于命令的全双工建模
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 For command-based FDM, we test the three architectures described in [Section: FDM Ability](#FDM_Ability) to fuse the listening channel and the speaking channel, which are early fusion (***LSLM***$_{EF}$), middle fusion (***LSLM***$_{MF}$), and late fusion (***LSLM***$_{LF}$).
 The results are shown in Table.02.
@@ -704,7 +704,7 @@ Therefore, ***LSLM***$_{MF}$ is concluded to be the best-performing model among 
 ### Voice-based FDM: 基于声音的全双工建模
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We utilized a more diverse set of interruption commands compared to the command-based FDM and involved unseen speakers in the testing procedures.
 The best configuration from the command-based FDM, the ***LSLM***$_{MF}$ model, was selected to evaluate the voice-based FDM capability.
@@ -730,7 +730,7 @@ The diverse set of interruption commands and the involvement of unseen speakers 
 ### Visualization: 可视化
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 To investigate the turn-taking internal mechanism of ***LSLM***, we visualize the probability distribution of `IRQ` tokens at different time steps during the generation process.
 Given that the `IRQ` token probability distribution varies significantly in order of magnitude across different time steps, we utilize a logarithmic scale for probability to enhance the clarity of the visualization.
@@ -754,7 +754,7 @@ Shortly thereafter, this probability rises to a level where the `IRQ` token is s
 ### Ablation Study: 消融研究
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 In this section, we conduct an ablation study on ***LSLM*** with middle fusion architecture to evaluate the impact of different training methods on the performance of TTS capability and interactive capability.
 The training methods are categorized as training from scratch (\ding{55}), loading the pre-trained model and fixing the parameters (\ding{51}), and loading the pre-trained model and continuing training (\ding{58}).
@@ -794,7 +794,7 @@ One potential reason is that the SSL encoder has not encountered diverse noise d
 ## 6.Conclusions: 结论
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 In this paper, we address the challenges of enhancing real-time interaction by introducing full duplex modeling (FDM) in interactive speech language models (iSLM).
 We introduce ***Listen-while-Speaking Language Model (LSLM)***, an innovative end-to-end model designed to handle real-time turn-taking.
