--- a/Models/SpeechLM/2023.03.06_FoundationTTS.md
+++ b/Models/SpeechLM/2023.03.06_FoundationTTS.md
@@ -33,14 +33,14 @@ Specifically, 1) we propose a hierarchical codec network based on vector-quantiz
 Experiments show that FoundationTTS achieves a MOS gain of +0.14 compared to the baseline system.
 In ASR customization tasks, our method achieves 7.09\% and 10.35\% WERR respectively over two strong customized ASR baselines.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
