--- a/Models/SpeechLM/2023.04.25_AudioGPT.md
+++ b/Models/SpeechLM/2023.04.25_AudioGPT.md
@@ -55,14 +55,14 @@ Our system is publicly available at [this https URL](https://github.com/AIGC-Aud
 实验结果表明了 ***AudioGPT*** 在解决多轮对话中与语音, 音乐, 声音和讲话头部理解和生成的能力, 为人类提供了创造丰富, 多样化的音频内容提供了前所未有的便利.
 我们的系统已公开可用, 位于 [https://github.com/AIGC-Audio/AudioGPT](https://github.com/AIGC-Audio/AudioGPT).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
