--- a/Models/SpeechLM/2023.05.22_TWIST.md
+++ b/Models/SpeechLM/2023.05.22_TWIST.md
@@ -39,14 +39,14 @@ Based on our observations, we present the largest (to the best of our knowledge)
 We additionally introduce two spoken versions of the StoryCloze textual benchmark to further improve model evaluation and advance future research in the field.
 We make speech samples, code and models publicly available: [this https URL](https://pages.cs.huji.ac.il/adiyoss-lab/twist/).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
