--- a/Models/SpeechLM/2023.05.24_Spectron.md
+++ b/Models/SpeechLM/2023.05.24_Spectron.md
@@ -36,14 +36,14 @@ Our method surpasses existing spoken language models in speaker preservation and
 Furthermore, the proposed model improves upon direct initialization in retaining the knowledge of the original LLM as demonstrated through spoken QA datasets.
 We release our audio samples ([this https URL](https://michelleramanovich.github.io/spectron/spectron)) and spoken QA dataset ([this https URL](https://github.com/google-research-datasets/LLAMA1-Test-Set)).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
