--- a/Models/SpeechLM/2023.05.25_VioLA.md
+++ b/Models/SpeechLM/2023.05.25_VioLA.md
@@ -49,14 +49,14 @@ Experimental results demonstrate that the proposed ***VioLA*** model can support
 
 实验结果表明, 提出的 ***VioLA*** 模型能够很好地支持单模态和跨模态任务, 并且仅解码器架构的模型在性能上与强大的基线相当, 甚至更好.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
