--- a/Models/SpeechCodec/2024.12.02_FreeCodec.md
+++ b/Models/SpeechCodec/2024.12.02_FreeCodec.md
@@ -62,13 +62,13 @@ However, speech includes several attributes(not just global and non-global), and
 Inspired by this, we explore a more detailed disentanglement of representations framework for better reconstruction.
 This framework also can be flexibly used in disentanglement scenarios.
 
-In this paper, we propose a more detailed representation of the neural speech codec - FreeCodec.
+In this paper, we propose a more detailed representation of the neural speech codec - ***FreeCodec***.
 By modeling complex speech into intrinsic attributes(speaker, prosody, and content), it achieves better performance in reconstruction and disentanglement scenarios.
 Meanwhile, we adopt different frame-level representations for different attributes, enabling more effective quantization and higher compression.
 
 Our main contributions are as follows:
 
-- We propose FreeCodec, a more-grained disentanglement neural speech codec that encodes intrinsic properties in speech with self-supervision.
+- We propose ***FreeCodec***, a more-grained disentanglement neural speech codec that encodes intrinsic properties in speech with self-supervision.
 - We show that our proposed framework can be flexibly used in reconstruction(e.g., zero-shot TTS, speech coding) and disentanglement(e.g., voice conversion) scenarios when using different training strategies.
 - Our proposed method using approximately 57 tokens per second, surpasses the existing state-of-the-art models in subjective and objective evaluation.
 
@@ -116,14 +116,14 @@ With these setups, the prosody encoder results in roughly a frame rate of 7 Hz f
 
 We adopt different methods to quantize different features.
 For the content and prosody information, we adopt a plain vector quantizer with one codebook, and the codebook size is set to 256.
-As for the speaker embedding, we use two types: continuous representation for FreeCodec-v1 and FreeCodec-v3 and discrete representation for FreeCodec-v2.
-Specifically, we compress the speaker embedding by group vector quantization (GVQ) in FreeCodec-v2 for speech coding.
+As for the speaker embedding, we use two types: continuous representation for ***FreeCodec-v1*** and ***FreeCodec-v3*** and discrete representation for ***FreeCodec-v2***.
+Specifically, we compress the speaker embedding by group vector quantization (GVQ) in ***FreeCodec-v2*** for speech coding.
 It divides the speaker embedding into eight groups that are quantized by one codebook with 1024 codebook size respectively.
-As for FreeCodec-v1 and FreeCodec-v3, we provide the continuous representation to the decoder for better reconstruction in such as zero-shot TTS and voice conversion scenarios, similar to \cite{ju2024naturalspeech, pan2024promptcodec}.
+As for ***FreeCodec-v1*** and ***FreeCodec-v3***, we provide the continuous representation to the decoder for better reconstruction in such as zero-shot TTS and voice conversion scenarios, similar to \cite{ju2024naturalspeech, pan2024promptcodec}.
 
 ### D.Decoders and Training Strategy
 
-FreeCodec also employs a mirrored decoder upsampling structure ([Github·SuperCodec](https://github.com/exercise-book-yq/Supercodec)).
+***FreeCodec*** also employs a mirrored decoder upsampling structure ([Github·SuperCodec](https://github.com/exercise-book-yq/Supercodec)).
 It uses (8, 5, 4, 2) as strides, resulting in a total upsampling of 320 times.
 However, reconstructing in the high compression rate scenarios is particularly challenging.
 Before upsampling, we first adopt 4 layers Transformer encoder to enhance the semantic modeling.
@@ -134,9 +134,9 @@ The training loss of the proposed method comprises five components: reconstructi
 The reconstruction loss, feature loss, and adversarial losses follow EnCodec \cite{zeghidour2022soundstream}.
 
 For the content loss, we extract the last layer representation from a pre-trained WavLM-Large model~\cite{chen2022wavlm} as the semantic learning target at 50 Hz.
-In FreeCodec-v1 and FreeCodec-v2, we use it to reduce the redundancy of the content encoder.
+In ***FreeCodec-v1*** and ***FreeCodec-v2***, we use it to reduce the redundancy of the content encoder.
 It maximizes the cosine similarity at the level of the dimensions across all timesteps between the outputs of the content encoder and semantic learning target.
-In FreeCodec-v3, we only use the semantic learning target at the decoder to prevent additional speaker information from leaking to the content encoder and quantizer.
+In ***FreeCodec-v3***, we only use the semantic learning target at the decoder to prevent additional speaker information from leaking to the content encoder and quantizer.
 We also utilize spectrogram-resize based
 data augmentation on the prosody and content encoder in the training \cite{freevc}.
 This approach achieves better performance in disentanglement scenarios.
@@ -149,18 +149,18 @@ We trained our model on LibriSpeech \cite{panayotov2015librispeech}, which consi
 We use train-clean-100, train-clean-360, and train-other-500 subsets.
 For a fair comparison, we adopt two recent neural codecs, TiCodec ([Github](https://github.com/y-ren16/TiCodec)) and Descript-audio-codec (DAC) ([Github](https://github.com/descriptinc/descript-audio-codec)), which have demonstrated success in the domain of neural speech codecs.
 The baselines are re-trained with 1 and 2 codebooks, indicating 0.5 kbps and 1 kbps.
-FreeCodec and TiCodec are trained on two V100 GPUs with 400 k iterations and batchsize of 20 per GPU.
+***FreeCodec*** and TiCodec are trained on two V100 GPUs with 400 k iterations and batchsize of 20 per GPU.
 DAC is trained on two V100 GPUs with 800 k iterations and batchsize of 10 per GPU.
 In addition, we also consider several open-source speech codecs as baselines,  EnCodec ([Github](https://github.com/facebookresearch/encodec)) at 3 kbps, and Lyra-v2 ([Github](https://github.com/google/lyra)) at 3.2 kbps, and Speechtokenizer\cite{zhang2024speechtokenizer} at 3 kbps, and SemantiCodec\cite{liu2024semanticodec} at 1.3 kbps, and Wavtokenizer-small\cite{ji2024wavtokenizer} at 0.9 kbps.
 For Encodec and Wavtokenizer-small, we use the 24 kHz pre-trained model to synthesize speech, corresponding to the same compression rate of 2 kbps and 0.6 kbps for the 16 kHz sampling rate, respectively.
 
-As for the voice conversion, three baseline models are selected to be compared with FreeCodec-v3:
+As for the voice conversion, three baseline models are selected to be compared with ***FreeCodec-v3***:
 VQMIVC \cite{wang2021vqmivc}, YourTTS \cite{casanova2022yourtts}, Wav2vec-vc \cite{lim2024wav2vec}.
 These models are trained on the VCTK datasets.
 
 ### B.Evaluation
 
-We evaluate FreeCodec from two aspects:
+We evaluate ***FreeCodec*** from two aspects:
 
 1) Reconstruction Quality.
    We conduct it on VCTK~\cite{VCTK} and test-clean subset of LibriSpeech.
@@ -175,7 +175,7 @@ We evaluate FreeCodec from two aspects:
 
 #### Subjective Evaluation
 
-We follow the established MUSHRA methodology~\cite{mushra} to evaluate the subjective quality of our baselines and FreeCodec-v2.
+We follow the established MUSHRA methodology~\cite{mushra} to evaluate the subjective quality of our baselines and ***FreeCodec-v2***.
 A group of fifteen listeners participate in the subjective tests.
 Fifteen utterances are randomly selected from our test sets for evaluation.
 In addition, we also adopt the Speex \cite{valin2016speex} at 4 kbps as our low anchor.
@@ -192,13 +192,13 @@ F0-PCC is the Pearson correlation coefficient used to evaluate ${f}_{0}$ consist
 ### A.Reconstruction Quality
 
 Table \ref{speech} summarizes the results of objective reconstruction experiments.
-The FreeCodec-v1 performs best in almost all objective metrics in test sets.
+The ***FreeCodec-v1*** performs best in almost all objective metrics in test sets.
 Especially in out-of-domain environments, our proposed method achieves the best reconstruction performance using only approximately 57 tokens per second.
-Compared to the FreeCodec-v2, the FreeCodec-v1 is better especially in speaker similarity.
+Compared to the ***FreeCodec-v2***, the ***FreeCodec-v1*** is better especially in speaker similarity.
 It shows that the continuous global representation is more effective in reconstruction scenarios.
-Although slightly lower STOI and SECS than DAC at 1 kbps, FreeCodec-v2 gets better objective speech quality according to UTMOS and WARP-Q.
+Although slightly lower STOI and SECS than DAC at 1 kbps, ***FreeCodec-v2*** gets better objective speech quality according to UTMOS and WARP-Q.
 The same result can also be concluded in subjective evaluation, as illustrated in Fig. \ref{fig:mushra}.
-In addition, FreeCodec-v2 achieves higher quality than Lyra-v2 at 3.2 kbps, EnCodec at 3 kbps, and TiCodec at 1 kbps.
+In addition, ***FreeCodec-v2*** achieves higher quality than Lyra-v2 at 3.2 kbps, EnCodec at 3 kbps, and TiCodec at 1 kbps.
 It demonstrates that the more-grained disentanglement framework leads to lower bitrate but higher reconstruction quality.
 
 Furthermore, we also conducted an ablation study to validate the explicit effect of content loss in the content encoder.
@@ -207,9 +207,9 @@ It can be observed that removing the content loss causes the performance drop in
 ### B.Disentanglement ability
 
 In this section, we describe the disentanglement ability on the voice conversion experiments.
-FreeCodec-v3 achieves voice conversion by using the speaker information from the target speech.
-As shown in Table \ref{vc}, the FreeCodec-v3 achieves lower WER and CER than all baseline models, especially the text-based models.
-Meanwhile, the F0 PCC and speaker similarity of FreeCodec-v3 is also the highest.
+***FreeCodec-v3*** achieves voice conversion by using the speaker information from the target speech.
+As shown in Table \ref{vc}, the ***FreeCodec-v3*** achieves lower WER and CER than all baseline models, especially the text-based models.
+Meanwhile, the F0 PCC and speaker similarity of ***FreeCodec-v3*** is also the highest.
 This indicates that our proposed method achieves superior disentanglement in intrinsic attributes of human speech.
 
 ## 6·Conclusions: 结论
